# mysnr

./: .gitignore  README.md  pyproject.toml  setup.py
mysnr/: __init__.py  example_usage.py  mysnr.py
src/: example_usage.py  mysnr.py
