[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mySNR"
version = "0.0.1"
authors = [
  { name="Kilian David", email="kilian.david@tum.de" },
]
description='A library for calculating SNR and SNDR from power spectral density'
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/kl-david/mysnr"